[tool.poetry]
name = "python-project-2"
version = "0.1.0"
description = ""
authors = ["mumz0 <parisot.sa@gmail.com>"]
readme = "README.md"
packages = [{include = "python_project_2"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
